# panicless-library

./: .env.example  .gitignore  ANTHROPIC_CONNECTOR.md  Cargo.toml  DOCKER.md  MCP_SETUP.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  test-docker.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  routes.rs
backend/src/crypto/: mod.rs
backend/src/handlers/: auth.rs  books.rs  connectors.rs  import.rs  mcp.rs  mod.rs  oauth.rs  openapi.rs  readings.rs  users.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: book.rs  connector.rs  import.rs  mod.rs  reading.rs  user.rs
backend/src/services/: goodreads_parser.rs  mod.rs
database/: README.md  seed_data.sql
database/migrations/: 00000000000001_create_users_table.sql  00000000000002_create_books_table.sql  00000000000003_create_readings_table.sql  00000000000004_create_connectors_table.sql  00000000000005_create_oauth_codes_table.sql
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  config.js
frontend/src/components/connectors/: ConnectorCard.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js  books.js  connectors.js  readings.js
frontend/src/views/: Authorize.vue  BookCatalog.vue  BookDetail.vue  Dashboard.vue  GoodreadsImport.vue  Home.vue  Login.vue  ReadingTracker.vue  Register.vue  Settings.vue
mcp-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
mcp-server/src/: auth.rs  config.rs  lib.rs  main.rs  openapi.rs  sse.rs
mcp-server/src/mcp/: mod.rs  server.rs  tools.rs
mcp-server/src/queries/: mod.rs
panicless-mcp-lib/: Cargo.toml
panicless-mcp-lib/src/: lib.rs  protocol.rs  queries.rs  tools.rs
