[package]
name = "panicless-backend"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fuga <fuga@studiofuga.com>"]
description = "REST API backend for Panicless Library management system"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
http = "1.0"

# Pin home to avoid MSRV issues
# home 0.5.12 requires Rust 1.88 (not yet released)
# home 0.5.11 requires Rust 1.81
home = "=0.5.11"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
