[package]
name = "panicless-backend"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fuga <fuga@studiofuga.com>"]
description = "REST API backend for Panicless Library management system"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# MCP library
panicless-mcp-lib = { path = "../panicless-mcp-lib" }

# SSE streaming
futures = "0.3"
tokio-stream = "0.1"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Encryption
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
http = "1.0"

# CSV parsing
csv = "1.3"

# For reading uploaded file bytes
bytes = "1.5"

# Pin home to avoid MSRV issues
# home 0.5.12 requires Rust 1.88 (not yet released)
# home 0.5.11 requires Rust 1.81
home = "=0.5.11"

[dev-dependencies]
