[package]
name = "panicless-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fuga <fuga@studiofuga.com>"]
description = "MCP server for Panicless Library - provides read-only access via Model Context Protocol"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (read-only)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP server (Axum)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
http = "1.0"

# Authentication
jsonwebtoken = "9.2"
async-trait = "0.1"

# SSE (Server-Sent Events) support
futures = "0.3"
tokio-stream = "0.1"

# Pin home to avoid MSRV issues
# home 0.5.12 requires Rust 1.88 (not yet released)
# home 0.5.11 requires Rust 1.81
home = "=0.5.11"
bigdecimal = "0.3.1"
