[package]
name = "panicless-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fuga <fuga@studiofuga.com>"]
description = "MCP server for Panicless Library - provides read-only access via Model Context Protocol"

[dependencies]
# Shared MCP library
panicless-mcp-lib = { path = "../panicless-mcp-lib" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
