[package]
name = "panicless-mcp-lib"
version = "0.1.0"
edition = "2021"
authors = ["Federico Fuga <fuga@studiofuga.com>"]
description = "Shared MCP protocol and tools library for Panicless Library"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
